// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Datepicker > Snapshots > should hide arrow for a range selection 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
      <!--v-if-->
      <div
        class="w-full input-group"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > Snapshots > should match its default snapshot 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > Snapshots > should show disabled 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group disabled"
      >
        <button
          class="input-group-addon fill-current pointer-events-none text-gray-300 border-gray-200 border-none"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          disabled=""
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0 opacity-50"
      >
        <svg
          aria-hidden="true"
          class="text-gray-700 w-5 h-5"
          height="1.2em"
          role="img"
          viewBox="0 0 640 640"
          width="1.2em"
        >
          <path
            d="M566.6 342.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L466.7 288H96c-17.7 0-32 14.3-32 32s14.3 32 32 32h370.7L361.3 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group disabled"
      >
        <button
          class="input-group-addon fill-current pointer-events-none opacity-50"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          disabled=""
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > Snapshots > should show invalid 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group invalid"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0"
      >
        <svg
          aria-hidden="true"
          class="text-gray-700 w-5 h-5"
          height="1.2em"
          role="img"
          viewBox="0 0 640 640"
          width="1.2em"
        >
          <path
            d="M566.6 342.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L466.7 288H96c-17.7 0-32 14.3-32 32s14.3 32 32 32h370.7L361.3 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group invalid"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > Snapshots > should show readonly 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group readonly"
      >
        <button
          class="input-group-addon fill-current pointer-events-none text-gray-300 border-gray-200"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          readonly=""
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0 opacity-50"
      >
        <svg
          aria-hidden="true"
          class="text-gray-700 w-5 h-5"
          height="1.2em"
          role="img"
          viewBox="0 0 640 640"
          width="1.2em"
        >
          <path
            d="M566.6 342.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L466.7 288H96c-17.7 0-32 14.3-32 32s14.3 32 32 32h370.7L361.3 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group readonly"
      >
        <button
          class="input-group-addon fill-current pointer-events-none opacity-50"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          readonly=""
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > Snapshots > should show required 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          required=""
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0"
      >
        <svg
          aria-hidden="true"
          class="text-gray-700 w-5 h-5"
          height="1.2em"
          role="img"
          viewBox="0 0 640 640"
          width="1.2em"
        >
          <path
            d="M566.6 342.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L466.7 288H96c-17.7 0-32 14.3-32 32s14.3 32 32 32h370.7L361.3 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          required=""
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > Snapshots > should show the arrow for a range selection 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0"
      >
        <svg
          aria-hidden="true"
          class="text-gray-700 w-5 h-5"
          height="1.2em"
          role="img"
          viewBox="0 0 640 640"
          width="1.2em"
        >
          <path
            d="M566.6 342.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L466.7 288H96c-17.7 0-32 14.3-32 32s14.3 32 32 32h370.7L361.3 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > Snapshots > should show the sm size with the dateTime mode 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-1"
    >
      <div
        class="w-full input-group input-group-sm"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-4 h-4"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4} [0-9]{2}:[0-9]{2} [am|pm]"
          placeholder="mm/dd/yyyy hh:mm am/pm"
          title="mm/dd/yyyy hh:mm am/pm"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0"
      >
        <svg
          aria-hidden="true"
          class="text-gray-700 w-4 h-4"
          height="1.2em"
          role="img"
          viewBox="0 0 640 640"
          width="1.2em"
        >
          <path
            d="M566.6 342.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L466.7 288H96c-17.7 0-32 14.3-32 32s14.3 32 32 32h370.7L361.3 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group input-group-sm"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-4 h-4"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4} [0-9]{2}:[0-9]{2} [am|pm]"
          placeholder="mm/dd/yyyy hh:mm am/pm"
          title="mm/dd/yyyy hh:mm am/pm"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > Snapshots > should show the sm size with the time mode 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-1"
    >
      <div
        class="w-full input-group input-group-sm"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-4 h-4"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M528 320c0 114.9-93.1 208-208 208s-208-93.1-208-208s93.1-208 208-208s208 93.1 208 208m-464 0c0 141.4 114.6 256 256 256s256-114.6 256-256S461.4 64 320 64S64 178.6 64 320m232-136v136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L344 307.2V184c0-13.3-10.7-24-24-24s-24 10.7-24 24"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}:[0-9]{2} [am|pm]"
          placeholder="hh:mm am/pm"
          title="hh:mm am/pm"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0"
      >
        <svg
          aria-hidden="true"
          class="text-gray-700 w-4 h-4"
          height="1.2em"
          role="img"
          viewBox="0 0 640 640"
          width="1.2em"
        >
          <path
            d="M566.6 342.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L466.7 288H96c-17.7 0-32 14.3-32 32s14.3 32 32 32h370.7L361.3 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group input-group-sm"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-4 h-4"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M528 320c0 114.9-93.1 208-208 208s-208-93.1-208-208s93.1-208 208-208s208 93.1 208 208m-464 0c0 141.4 114.6 256 256 256s256-114.6 256-256S461.4 64 320 64S64 178.6 64 320m232-136v136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L344 307.2V184c0-13.3-10.7-24-24-24s-24 10.7-24 24"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}:[0-9]{2} [am|pm]"
          placeholder="hh:mm am/pm"
          title="hh:mm am/pm"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;

exports[`Datepicker > Snapshots > should show valid 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-datepicker"
>
  <div
    class="inline-block w-full"
  >
    
    <div
      class="flex w-full gap-2"
    >
      <div
        class="w-full input-group valid"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="Start date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
      <div
        class="flex my-auto shrink-0"
      >
        <svg
          aria-hidden="true"
          class="text-gray-700 w-5 h-5"
          height="1.2em"
          role="img"
          viewBox="0 0 640 640"
          width="1.2em"
        >
          <path
            d="M566.6 342.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L466.7 288H96c-17.7 0-32 14.3-32 32s14.3 32 32 32h370.7L361.3 457.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="w-full input-group valid"
      >
        <button
          class="input-group-addon fill-current"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            height="1.2em"
            role="img"
            viewBox="0 0 640 640"
            width="1.2em"
          >
            <path
              d="M216 64c13.3 0 24 10.7 24 24v40h160V88c0-13.3 10.7-24 24-24s24 10.7 24 24v40h32c35.3 0 64 28.7 64 64v288c0 35.3-28.7 64-64 64H160c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64h32V88c0-13.3 10.7-24 24-24m0 112h-56c-8.8 0-16 7.2-16 16v48h352v-48c0-8.8-7.2-16-16-16zm-72 112v192c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16V288z"
              fill="currentColor"
            />
          </svg>
          <span
            class="sr-only"
          >
            Select a date
          </span>
        </button>
        <input
          aria-label="End date"
          class="form-control"
          pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}"
          placeholder="mm/dd/yyyy"
          title="mm/dd/yyyy"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
  <!---->
</div>
`;
